--- a/templates/loading.html
+++ b/templates/loading.html
@@ -26,7 +26,7 @@
 
         
         .navbar {
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: black;
             padding: 15px 20px;
             display: flex;
             justify-content: space-between;
@@ -36,24 +36,31 @@
             left: 0;
             right: 0;
             z-index: 1000;
-            flex-wrap: wrap;
+        }
+
+        .navbar h1 {
+            color: white;
+            margin: 0;
+            font-size: 20px;
         }
 
         .navbar-links {
             display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
         }
 
         .navbar-links a {
             color: white;
             text-decoration: none;
-            font-size: 16px;
-            padding: 5px 10px;
+            margin-left: 15px;
+            font-size: 14px;
+        }
+
+        .navbar-links a:hover {
+            text-decoration: underline;
         }
 
         .easy {
-            font-size: 24px;
+            font-size: 20px;
             color: white;
             text-decoration: none;
             font-weight: bold;
@@ -148,7 +155,7 @@
         font-weight: bold;
     }
 
-        @media (max-width: 600px) {
+    @media (max-width: 600px) {
             .navbar {
                 padding: 10px;
                 flex-direction: row;
