--- a/templates/pages.html
+++ b/templates/pages.html
@@ -231,7 +231,7 @@
                 <p></p> 
             </button>        
             <button class="button" >
-                <a href="{{ url_for('loading') }}" class="btn btn-secondary">
+                <a href="{{ url_for('cgpa') }}" class="btn btn-secondary">
                     <div class = "hehe">
                         <div class="cgpa-container">
                             <div class="text">CGPA</div>
