--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -155,21 +155,18 @@
             }
         }
         .popup {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #333;
-  color: #fff;
-  padding: 15px 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 300px;
-  max-width: 90%;
-  z-index: 1000;
-}
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        padding: 15px 20px;
+        border-radius: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 300px;
+        max-width: 90%;
+        z-index: 1000;
+    }
 
 .popup p {
   margin: 0;
@@ -225,7 +222,7 @@
         </div>     
         {% endfor %}    
     </div>
-    <div class="popup" id="popup">
+    <div class="popup" id="popup" style="background-color: rgb(212, 9, 9); color: rgb(255, 255, 255);">
         <p>After all regular bunks have been used. Using exemption bunks will reduce your physical attendance to 65%.</p>
         <button class="close-btn" onclick="closePopup()">×</button>
     </div>
