--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easy Collge</title>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MDXJ0EXKZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6MDXJ0EXKZ');
+    </script>
+
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 
     <style>
