--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -151,7 +151,7 @@
     </nav>  
 
     <div class="cgpa-container">
-        <h2>CGPA Calculator</h2>
+        <h2>GPA Calculator</h2>
         <table class="cgpa-table">
             <thead>
                 <tr>
@@ -178,7 +178,7 @@
         <div id="cgpa-result">
             <p style="  font-size: 12px; margin-bottom: 20px; margin-top: 20px ;">Total Credits: {{ total_credits }}</p>
             
-            <p style="font-family:Verdana, Geneva, Tahoma, sans-serif ; color: aqua;">CGPA: {{ gpa}}</p>
+            <p style="font-family:Verdana, Geneva, Tahoma, sans-serif ; color: aqua;">GPA: {{ gpa}}</p>
         </div>
     </div>
 </body>
