--- a/templates/pages.html
+++ b/templates/pages.html
@@ -235,7 +235,7 @@
                 <a href="{{ url_for('cgpa') }}" class="btn btn-secondary">
                     <div class = "hehe">
                         <div class="cgpa-container">
-                            <div class="text">CGPA</div>
+                            <div class="text">GPA</div>
                             <div class="line"></div>
                             <div class="symbols">
                             <span>+</span>
