changed the name error

--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -189,7 +189,7 @@
         <div id="cgpa-result">
             <p style="  font-size: 12px; margin-bottom: 20px; margin-top: 20px ;">Total Credits: {{ total_credits }}</p>
             
-            <p style="font-family:Verdana, Geneva, Tahoma, sans-serif ; color: aqua;">GPA: {{ gpa}}</p>
+            <p style="font-family:Verdana, Geneva, Tahoma, sans-serif ; color: aqua;">~GPA: {{ gpa}}</p>
         </div>
     </div>
 </body>
