changed meta info

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,9 +17,11 @@
     gtag('config', 'G-6MDXJ0EXKZ');
     </script>
 
+    <meta name="description" content="Welcome to Easy College. Life made easier for PSG students." />
+
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 
-    <style>
+    <style>~
         * {
             box-sizing: border-box;
             margin: 0;
