--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
 
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 
-    <style>~
+    <style>
         * {
             box-sizing: border-box;
             margin: 0;
