--- a/templates/about.html
+++ b/templates/about.html
@@ -341,7 +341,7 @@
     <section class="about-section">
         <h2>About Us</h2>
         <p style="font-size: 30px;">
-          This was done as a fun second year project to make college life easier.
+          This was done as a fun second year project inspired by <a href="https://bunker-api.vercel.app/" target="_blank">bunkrAPI</a> to make college life easier.
         </p>  
     </section>
 
