FINALLY FIXED THE EXEMPTION LOGIC ONLY THING LEFT IS TO ADD TABLE AND I THINK WE SHOULD OUTSOURCE IT TO SOMEONE SO THAT THEY CAN LEARN

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -242,7 +242,7 @@
         {% endfor %}    
     </div>
     <div class="popup" id="popup" style="background-color: rgb(212, 9, 9); color: rgb(255, 255, 255);">
-        <p>After all regular bunks have been used. Using exemption bunks will reduce your physical attendance to 65%.</p>
+        <p>Normal bunks ensures that your physical attendance stays above 75% while exemption bunks ensures that exemption attendance stays above 75% and physical above 65%</p>
         <button class="close-btn" onclick="closePopup()">×</button>
     </div>
 <script>
