ADDED CGPA CALCULATOR FEATURE

--- a/templates/pages.html
+++ b/templates/pages.html
@@ -262,6 +262,25 @@
                 <p></p>
                 <p></p>             
             </button>
+            <button class="button" >
+                <a href="{{ url_for('cgpa_calculator') }}" class="btn btn-secondary">
+                    <div class = "hehe">
+                        <div class="cgpa-container">
+                            <div class="text">CGPA</div>
+                            <div class="line"></div>
+                            <div class="symbols">
+                            <span>+</span>
+                            <span>|</span>
+                            <span>-</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <br>
+                <br>
+                <p></p>
+                <p></p>             
+            </button>
         </div>        
     </div>
 
