--- a/templates/real_cgpa.html
+++ b/templates/real_cgpa.html
@@ -191,7 +191,9 @@
     </nav>
 
     <div class="login-container">
-        <h2>Sorry, CGPA is not available for you.</h2>
+        <h2>Total Credits: {{result['total_credits']}}</h2>
+        <h2>Total Credit Points: {{result['credit_points_total']}}</h2>
+        <h2>CGPA: {{result['cgpa']}}</h2>
     </div>
 </body>
 </html>
